--- a/Hamstore/app/src/main/res/values/strings.xml
+++ b/Hamstore/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Hamstore</string>
+    //gg
+    <string name="gg" translatable="false">94150586774-tcuggtv48vtb53mdubcaf791s2abdeh1.apps.googleusercontent.com</string>
+
 </resources>
